fix(ws): added fixes for websocket & gateway that allow multiple discord.jar instances to run under a single java process - this previously didn't work because of static variables